# mediaboard

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ini  mediaboard.sql
.cargo/: config.toml
res/css/: common.css  tailwind_gen.css
res/html/: admin.html  album.html  edit.html  header.html  index.html  paging.html  post.html  sidebar.html  tag.html  tags.html  upload.html  upload_post.html
res/html/include/: edit.html  header.html  paging.html  sidebar.html
src/: db.rs  main.rs  route.rs
src/db/: func.rs  item.rs  item_tag.rs  tag.rs  tag_tag.rs
src/route/: admin.rs  album.rs  folder.rs  index.rs  post.rs  upload.rs
