[package]
name = "mediaboard"
version = "0.1.0"
authors = ["Trung Do <dothanhtrung.16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.3"
actix-http = "2"
actix-multipart = "0.3"
actix-web = "3"
async-std = "1.10.0"
clap = { version = "3.1.18", features = ["derive"] }
configparser = "2.1.0"
futures = "0.3.17"
md-5 = "0.9.1"
rusqlite = "0.25.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "sqlite" ] }
tera = "1.8.0"
walkdir = "2"